syntax = "proto3";

package bytebase.store;

import "common.proto";

option go_package = "generated-go/store";

message ExportArchivePayload {
  // The exported file format. e.g. JSON, CSV, SQL
  ExportFormat file_format = 1;
}
